Fix horizontal overflow

--- a/src/index.sass
+++ b/src/index.sass
@@ -1,5 +1,5 @@
 html, body, #root
-  min-width: 100vw
+  min-width: 100%
   min-height: 100vh
 
 *
